<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_game_mode_dialog">

    <TextView
        android:id="@+id/gameModeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_game_mode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />

    <RadioGroup
        android:id="@+id/gameModeRadioGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gameModeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="25dp">
        <RadioButton
            android:id="@+id/oneGameRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/gameModeRadioGrp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/play_one_game"
            />
        <RadioButton
            android:id="@+id/fiveGameRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/oneGameRadioBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/play_five_games"
            android:layout_marginBottom="20dp"
            />
    </RadioGroup>
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirmButton"
        app:layout_constraintTop_toBottomOf="@id/gameModeRadioGrp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"/>
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/gameModeRadioGrp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>