<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_info_page"
    tools:context=".ui.friends.InfoPageFragment">


    <ImageButton
        android:id="@+id/infoPage_playButton"
        android:layout_width="73dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_corners"
        android:src="@drawable/ic_baseline_sports_esports_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayPicture_infoPage"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/displayPicture_infoPage"
        android:layout_width="198dp"
        android:layout_height="146dp"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/profile_img"
        app:layout_constraintBottom_toTopOf="@id/userName_infoPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/infoPage_backButton"
        android:layout_width="73dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_corners"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintEnd_toStartOf="@+id/displayPicture_infoPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/userName_infoPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/statsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayPicture_infoPage" />

    <TextView
        android:id="@+id/statsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="Stats"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/statsCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName_infoPage"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/statsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/winRateText_infoPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="Win Rate"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/globalRankingText_infoPage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gamesWonText_infoPage" />

            <TextView
                android:id="@+id/globalRankingText_infoPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="Ranking(Global)"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/localRankingText_infoPage"
                app:layout_constraintTop_toBottomOf="@+id/localRankingText_infoPage" />

            <TextView
                android:id="@+id/localRankingText_infoPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="Ranking(Local)"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/globalRankingText_infoPage"
                app:layout_constraintStart_toStartOf="@+id/tournamentWonText_infoPage"
                app:layout_constraintTop_toBottomOf="@+id/tournamentWonText_infoPage" />

            <TextView
                android:id="@+id/tournamentWonText_infoPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:text="Tournaments Won"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gamesPlayedText_infoPage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gamesWonText_infoPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="Games Won"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/winRateText_infoPage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gamesPlayedText_infoPage" />

            <TextView
                android:id="@+id/gamesPlayedText_infoPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="4dp"
                android:text="Games Played"
                android:textSize="16dp"
                app:layout_constraintBottom_toTopOf="@+id/gamesWonText_infoPage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>