<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.friends.FriendsFragment"
    android:id="@+id/fragment_friends">

    <ImageButton
        android:id="@+id/requestButton"
        android:layout_width="73dp"
        android:layout_height="54dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/rounded_corners"
        android:src="@drawable/ic_baseline_person_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?colorPrimary"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485"
        tools:listitem="@layout/friend_card2" />


</androidx.constraintlayout.widget.ConstraintLayout>