<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.game.GameResultFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/game_over"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/game_result_communicate" />

    <TextView
        android:id="@+id/game_result_communicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_again" />

    <Button
        android:id="@+id/backHomeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_home" />

</LinearLayout>