...
            android:background="@null"
            android:contentDescription="@string/rock_button_des"
            android:scaleType="fitXY"
            android:src="@drawable/rock_icon_light" />

        <ImageButton
            android:id="@+id/paperIM"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@null"
            android:contentDescription="@string/paper_button_des"
            android:scaleType="fitXY"
            android:src="@drawable/paper_icon_light" />
...
